--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,6 +11,11 @@
 			ユーザーIDならname、ロールならprincipal.authoritiesで取得できる
 			これは、ユーザー情報を持っているクラスのgetterを呼び出している -->
 		<p>ユーザーID:<span sec:authentication="name"></span></p>
+		<!-- 独自ユーザー情報の取得 -->
+		<p>principal.userId: <span sec:authentication="principal.userId"></span></p>
+		<p>principal.username: <span sec:authentication="principal.username"></span></p>
+		<p>ユーザー名: <span sec:authentication="principal.appUserName"></span></p>
+		<p>メール: <span sec:authentication="principal.mailAddress"></span></p>
 		<p>ロール:<span sec:authentication="principal.authorities"></span></p>
 		<form method="post" th:action="@{/logout}">
 			<button type="submit">ログアウト</button>
